# fr3-digital-twin

./: README.md
dyros_robot_controller/: CMakeLists.txt  README.md
dyros_robot_controller/drc/: __init__.py  type_define.py
dyros_robot_controller/drc/manipulator/: robot_controller.py  robot_data.py
dyros_robot_controller/drc/mobile/: robot_controller.py  robot_data.py
dyros_robot_controller/drc/mobile_manipulator/: robot_controller.py  robot_data.py
dyros_robot_controller/examples/C++/: CMakeLists.txt
dyros_robot_controller/examples/C++/include/: fr3_controller.hpp  xls_controller.hpp
dyros_robot_controller/examples/C++/include/mujoco/: simulate.h
dyros_robot_controller/examples/C++/src/: fr3_controller.cpp  main.cpp  xls_controller.cpp
dyros_robot_controller/examples/C++/src/mujoco/: simulate.cc
dyros_robot_controller/examples/python/: dyros_robot_controller_example.py  fr3_controller.py  mujoco_bridge.py  xls_controller.py
dyros_robot_controller/include/: math_type_define.h
dyros_robot_controller/include/dyros_robot_controller/: QP_base.h  type_define.h
dyros_robot_controller/include/dyros_robot_controller/manipulator/: QP_ID.h  QP_IK.h  robot_controller.h  robot_data.h
dyros_robot_controller/include/dyros_robot_controller/mobile/: robot_controller.h  robot_data.h
dyros_robot_controller/include/dyros_robot_controller/mobile_manipulator/: QP_ID.h  QP_IK.h  robot_controller.h  robot_data.h
dyros_robot_controller/src/: bindings.cpp
dyros_robot_controller/src/manipulator/: QP_ID.cpp  QP_IK.cpp  robot_controller.cpp  robot_data.cpp
dyros_robot_controller/src/mobile/: robot_controller.cpp  robot_data.cpp
dyros_robot_controller/src/mobile_manipulator/: QP_ID.cpp  QP_IK.cpp  robot_controller.cpp  robot_data.cpp
dyros_robot_menagerie/: CMakeLists.txt  README.md  package.xml  plugins.xml
dyros_robot_menagerie/dyros_robot_menagerie/: __init__.py
dyros_robot_menagerie/dyros_robot_menagerie/fr3/: controller.py  robot_data.py
dyros_robot_menagerie/dyros_robot_menagerie/husky/: controller.py  robot_data.py
dyros_robot_menagerie/dyros_robot_menagerie/pcv/: controller.py  robot_data.py
dyros_robot_menagerie/dyros_robot_menagerie/ur5e/: controller.py  robot_data.py  ros2_qt_gui.py
dyros_robot_menagerie/dyros_robot_menagerie/xls/: controller.py  robot_data.py  ros2_qt_gui.py
dyros_robot_menagerie/include/: image_io.h  math_type_define.h
dyros_robot_menagerie/include/dyros_robot_menagerie/fr3/: controller.h  robot_data.h
dyros_robot_menagerie/include/dyros_robot_menagerie/husky/: controller.h  robot_data.h
dyros_robot_menagerie/include/dyros_robot_menagerie/pcv/: controller.h  robot_data.h
dyros_robot_menagerie/include/dyros_robot_menagerie/ur5e/: controller.h  robot_data.h
dyros_robot_menagerie/include/dyros_robot_menagerie/xls/: controller.h  robot_data.h
dyros_robot_menagerie/launch/: fr3.launch.py  fr3_rviz.rviz  husky.launch.py  husky_rviz.rviz  pcv.launch.py  pcv_rviz.rviz  ur5e.launch.py  ur5e_rviz.rviz  xls.launch.py  xls_rviz.rviz
dyros_robot_menagerie/robot/: fr3_husky.srdf  fr3_husky.urdf  fr3_pcv.srdf  fr3_pcv.urdf  fr3_xls.srdf  fr3_xls.urdf  husky.srdf  husky.urdf  pcv.srdf  pcv.urdf  ur5e.srdf  ur5e.urdf  xls.srdf  xls.urdf
dyros_robot_menagerie/src/fr3/: controller.cpp  robot_data.cpp
dyros_robot_menagerie/src/husky/: controller.cpp  robot_data.cpp
dyros_robot_menagerie/src/pcv/: controller.cpp  robot_data.cpp
dyros_robot_menagerie/src/ur5e/: controller.cpp  robot_data.cpp
dyros_robot_menagerie/src/xls/: controller.cpp  robot_data.cpp
mujoco_ros_sim/: .gitmodules  CMakeLists.txt  README.md  package.xml  plugins.xml
mujoco_ros_sim/include/mujoco/: glfw_adapter.h  simulate.h
mujoco_ros_sim/include/mujoco_ros_sim/: controller_interface.hpp  mujoco_ros_sim.hpp  py_controller.hpp  utils.hpp
mujoco_ros_sim/launch/: mujoco_sim.launch.py
mujoco_ros_sim/mujoco_menagerie/dual_fr3_husky/: dual_fr3_husky.xml  scene.xml
mujoco_ros_sim/mujoco_menagerie/dyros_pcv/: dyros_pcv.xml
mujoco_ros_sim/mujoco_menagerie/fr3_dyros_pcv/: fr3_dyros_pcv.xml  scene.xml
mujoco_ros_sim/mujoco_menagerie/fr3_husky/: fr3_husky.xml
mujoco_ros_sim/mujoco_menagerie/fr3_husky/assets/husky/accessories/: Azure_Kinect_DK.stl
mujoco_ros_sim/mujoco_menagerie/fr3_xls/: fr3_xls.xml
mujoco_ros_sim/mujoco_menagerie/franka_fr3_torque/: fr3.xml
mujoco_ros_sim/mujoco_menagerie/husky/: husky.xml
mujoco_ros_sim/mujoco_ros_sim/: __init__.py  controller_interface.py
mujoco_ros_sim/src/mujoco/: lodepng.cpp  simulate.cc
mujoco_ros_sim/src/mujoco_ros_sim/: mujoco_ros_sim.cpp  py_controller.cpp
